# couch-co-op

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
C/: CMakeLists.txt
C/include/: math_lib.h
C/src/: example.c  math_lib.c
PalletTown/: PalletTownMacOS.swift  PalletTownSwitch.swift  README.md  index.html  pallet-town.js  run.sh  server.py
Swift/: Package.swift
Swift/Sources/CMathLib/: math_lib.h  module.modulemap
Swift/Sources/MathLibSwift/: MathLibSwift.swift
Swift/Sources/MathLibSwiftCli/: main.swift
tvOS/: SETUP.md
tvOS/couch-co-op/: AppDelegate.swift  ContentView.swift
